--- a/setup.cfg
+++ b/setup.cfg
@@ -8,6 +8,10 @@ exclude = ^examples
 first-package-wins = true
 where = test
 
+[pytest]
+addopts= --tb native -v -r fEsxX
+python_files=test/*
+
 [upload]
 sign = 1
 identity = C4DAFEE1
