--- a/setup.cfg
+++ b/setup.cfg
@@ -9,7 +9,7 @@ first-package-wins = true
 where = test
 
 [pytest]
-addopts= --tb native -v -r fEsxX
+addopts= --tb native -v -r fExX
 python_files=test/*
 
 [upload]
